[ACS-11962][run tests]-Updated Tests according to Elastic Search usage